Wed Jul 31 18:32:25 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/common.rb (URI.decode_www_form_component): Use String#b.

Wed Jul 31 18:24:02 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine, mod_using, top_using): don't show
	  warnings because Refinements are no longer experimental.
	  [ruby-core:55993] [Feature #8632]

	* test/ruby/test_refinement.rb: related test.

	* NEWS: fixes for the above change.

Wed Jul 31 17:55:55 2013  Shota Fukumori  <her@sorah.jp>

	* lib/uri/common.rb (URI.decode_www_form_component):
	  Don't raise error when str includes multibyte characters.

Wed Jul 31 17:45:39 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_rindex): performance improvement by using
	  memrchr(3).

Wed Jul 31 16:43:30 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_rindex): refactoring and avoid to call str_nth() if
	  pos == 0.

Wed Jul 31 14:41:36 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb: [DOC] Add a couple of notes on Hash as storage.
	  ref. [Feature #6589]

Wed Jul 31 14:38:52 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb: [DOC] Fix example result.  Hash is now ordered.

Wed Jul 31 14:38:10 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb: [DOC] Use the term "sorted" instead "ordered" when
	  mentioning SortSet.

Wed Jul 31 12:18:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_struct): New structure.
	  (big2str_orig): Use big2str_struct.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Ditto.

Wed Jul 31 12:02:16 2013  Zachary Scott  <e@zzak.io>

	* lib/rubygems.rb: [DOC] typo in url patch by @Red54 [Fixes #369]
	  https://github.com/ruby/ruby/pull/369

Wed Jul 31 07:09:07 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems from master as of commit 523551c
	* test/rubygems:  ditto.

Tue Jul 30 22:21:54 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* test/ruby/test_hash.rb: add a test for enumeration order of Hash.
