@@ -1,3 +1,9 @@
+Wed Jul 31 19:55:33 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (MAX_BIG2STR_TABLE_ENTRIES): Use SIZEOF_SIZE_T.
+	  (power_cache_get_power0): Add rb_bug call for too bit i argument.
+	  (power_cache_get_power): Simplified.
+
 Wed Jul 31 18:32:25 2013  Akinori MUSHA  <knu@iDaemons.org>
 
 	* lib/uri/common.rb (URI.decode_www_form_component): Use String#b.
